# representation-learning-methods

./: .gitignore  README.md  log.ipynb  pyproject.toml  requirements.txt  sprawozdanie.ipynb
data/: download_and_prep_data.sh
experiments/: lightning_logs_latent-flow-large-pretraining-2.csv  lightning_logs_latent-flow-pretraining.csv
experiments/val_acc/: lightning_logs_ae-linear.csv  lightning_logs_latent-flow-large-linear-2.csv  lightning_logs_latent-flow-large-linear.csv  lightning_logs_latent-flow-linear.csv
experiments/val_loss/: lightning_logs_ae-linear.csv  lightning_logs_latent-flow-large-linear-2.csv  lightning_logs_latent-flow-large-linear.csv  lightning_logs_latent-flow-linear.csv
models/: bigan.ipynb  dino.ipynb  utils.py  vision_transformer.py
models/lightning_logs/version_0/: events.out.tfevents.1718822985.ThinkPad-T480.21710.0
notebooks/: b_vae_train.ipynb  dino.ipynb  eda.ipynb  models.ipynb  playground.ipynb  plot_results.ipynb  reconstruction.ipynb  train_pretrained_bigan.ipynb
scripts/: b_vae_res.ipynb  b_vae_train.py  test_b_vae.py  test_bigan.py  test_clf.py  test_clf_flow.py  train.py  train_ae.py  train_bigan.py  train_bigan_pretrained.py  train_clf.py  train_clf_baseline.py  train_clf_flow.py  train_flow.py
ssl_methods/: data_modules.py  decoder.py  encoder.py  train_modules.py  utils.py
ssl_methods/beta_vae/: b_vae.py  components.py
ssl_methods/bigan/: data_module.py  eval_module.py  loss.py  models.py  train_module.py
ssl_methods/latent_flow/: flow.py  loss.py  train_module.py
(+17 files in other folders)
