[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl-methods"
version = "0.0.1"
description = "Repository for self-supervised learning methods"

dependencies = [
    "matplotlib==3.9.0",
    "numpy==2.0.0",
    "pandas==2.2.2",
    "pillow==10.3.0",
    "pytorch_lightning==2.2.5",
    "scikit-learn==1.5.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
]


[tool.setuptools]
packages = ["ssl_methods"]